# phone-native-agent

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
android-host/: README.md  settings.gradle.kts
android-host/app/: build.gradle.kts
config/: agent.json
docs/: architecture-direction.md  desktop-agent-gap.md  new-user-quick-start.md  refactor-plan.md  self-test-feedback-plan.md  ssh-pc-control.md  tool-loading.md
docs/ci/: github-actions-ci.yml
docs/promotion/: launch-posts.md  publish-checklist.md
docs/releases/: v0.2.0-alpha.md  v0.3.0-alpha.md
mobile_agent/: __init__.py  action_confirmation.py  app_creator.py  host_bridge.py  phone_tools.py  settings.py  termux_api.py
mobile_agent/core/: __init__.py  (+9 more)
my_apps/: README.md
plugins/: README.md
scripts/: android-env.ps1  android-host-e2e.ps1  chat-termux.sh  check-cli-termux.sh  check-native-tools-termux.sh  check-permission-ui-termux.sh  check-real-cli-termux.sh  check-real-http-termux.sh  check-real-model-termux.sh  check-tools-termux.sh  configure-termux-from-host.ps1  demo-termux.sh  enable-termux-run-command.sh  install-termux-cli.sh  run-local.ps1  run-termux.sh  smoke-termux.sh  smoke.ps1  start-http-termux.sh
tests/: test_agent.py  test_agent_protocol.py  test_android_native_sources.py  test_cli.py  test_cli_structure.py  test_host_bridge.py  test_http.py  test_phone_toolkits_structure.py  test_phone_tools.py  test_plugins.py  test_progressive_tools.py  test_self_test.py  test_terminal_tasks.py  test_termux_api.py
(+150 files in other folders)
