[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-agent"
version = "0.3.0a0"
description = "Phone-resident mobile agent prototype with Android host tools and a managed task loop"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
mobile-agent = "mobile_agent.hosts.cli:main"
mobile-agent-http = "mobile_agent.hosts.http_server:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mobile_agent*"]
